# Accord

./: .gitignore  .travis.yml  AccordAuthServer.kdev4  CMakeLists.txt  README.md  config.yml.example
cmake/: FindLibEvent.cmake  FindMySQL++.cmake
include/: Arguments.h  Server.h
include/accordcliclient/: CommandParser.h  Commands.h
include/accordserver/: Arguments.h  Authentication.h  Config.h  PermissionLogic.h  Server.h
include/accordserver/database/: Database.h
include/accordserver/log/: Logger.h
include/accordserver/network/: PacketDecoder.h  PacketHandlers.h
include/accordserver/network/packet/: SendMessagePacket.h
include/accordserver/thread/: Thread.h
include/accordserver/util/: CryptoUtil.h  LibEventUtil.h  Network.h  OpenSSLUtil.h
include/accordshared/error/: ErrorCodes.h
include/accordshared/network/: Packet.h  PacketData.h  PacketDecoder.h  PacketHandler.h
include/accordshared/network/packet/: AuthPacket.h  DisconnectPacket.h  ErrorPacket.h  KeepAlivePacket.h  RegisterPacket.h  RequestDataPacket.h  SendMessagePacket.h  SerializationPacket.h  TokenPacket.h
include/accordshared/types/: Database.h  Permissions.h  Request.h  Return.h
include/accordshared/util/: BinUtil.h  Factory.h  Serialization.h
include/log/: Logger.h
include/network/: PacketDecoder.h
include/network/packet/: SendMessagePacket.h
include/thread/: Thread.h
include/util/: LibEventUtil.h
src/: Server.cpp  main.cpp
src/cliclient/: CMakeLists.txt  CommandParser.cpp  Commands.cpp  main.cpp
src/cliclient/include/: CommandParser.h
src/client/: AddChannel.qml  AddChannelForm.ui.qml  AddCommunity.qml  AddCommunityForm.ui.qml  Client.qml  ClientForm.ui.qml  CommunitySettings.qml  CommunitySettingsForm.ui.qml  Login.qml  LoginForm.ui.qml  backend.cpp  backend.h  client.qrc  communityimageprovider.cpp  communityimageprovider.h  main.cpp  main.qml  util.cpp  util.h
src/log/: Logger.cpp
src/network/: PacketDecoder.cpp
src/network/packet/: SendMessagePacket.cpp
src/server/: Arguments.cpp  Authentication.cpp  Config.cpp  PermissionLogic.cpp  Server.cpp  main.cpp
src/server/database/: Database.cpp
src/server/log/: Logger.cpp
src/server/network/: PacketDecoder.cpp  PacketHandlers.cpp
src/server/network/packet/: SendMessagePacket.cpp
src/server/thread/: Thread.cpp
src/server/util/: CryptoUtil.cpp  LibEventUtil.cpp  OpenSSLUtil.cpp
src/shared/network/: Packet.cpp  PacketDecoder.cpp  PacketHandler.cpp
src/shared/network/packet/: AuthPacket.cpp  DisconnectPacket.cpp  ErrorPacket.cpp  RegisterPacket.cpp  RequestDataPacket.cpp  SendMessagePacket.cpp  SerializationPacket.cpp  TokenPacket.cpp
src/shared/types/: Database.cpp
src/shared/util/: BinUtil.cpp  Serialization.cpp
src/thread/: Thread.cpp
src/util/: LibEventUtil.cpp
travis/: libargon2.pc  travis_linux.sh  travis_osx.sh
